# iccad2017b_cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inputs.txt  small.txt
app/: CMakeLists.txt  README.md  routing_report.cxx
contest_page/: default.html
include/: algo.hpp  astar.hpp  base.hpp  config.hpp  kappamst.hpp  model.hpp  mst.hpp  muf.hpp  parser.hpp  router.hpp
lib/: CMakeLists.txt  algo.cxx  astar.cxx  base.cxx  grid.cxx  kappamst.cxx  model.cxx  mst.cxx  mst_iterative.cxx  mst_iterative_3step.cxx  mst_iterative_local_3step.cxx  muf.cxx  parser.cxx  router.cxx
results/: 0bc0945.result  13103ae.result  35091e1.result  4124573.result  4aae38c.result  52cad78.result  5fa177f.result  62e95d9.result  79573bc.result  7baa66c.result  8493bcd.result  96534b8.result  99e9504.result  9d94cb4.result  9f43452.result  a9eac31.result  b8d38e6.result  bd2918a.result  c93da15.result  cc8b1ca.result  d3fa379.result  d72ef92.result  e254d75.result  e6c8500.result  e8af858.result  eb11f65.result  ee285f0.result  f10bfff.result  f7a23d4.result  fd27fe2.result  resultados_revisao.ods  resultados_revisao_csv.csv  resultados_revisao_csv_tabs.csv  testcases_variando_numero_de_vizinhos_e_obstaculos.csv  testcases_variando_numero_de_vizinhos_e_obstaculos.ods  testcases_variando_numero_de_vizinhos_e_obstaculos_astar.csv  testcases_variando_numero_de_vizinhos_e_obstaculos_diamond3.csv
test/: CMakeLists.txt  generators.hpp  test_base.cxx  test_geometry.cxx  test_mst.cxx  test_parse.cxx  test_router.cxx  test_treap.cxx  test_treap_circle.cxx  test_treap_radius2.cxx
testcases/official/hidden/: case4  case5
testcases/original/: case-1  case-2  case-3  case-5
testcases/original/random_cases/: 100-3-100  101-3-101  106-3-106  108-3-108  109-3-109  11-3-11  110-3-110  111-3-111  115-3-115  116-3-116  118-3-118  119-3-119  123-3-123  124-3-124  125-3-125  126-3-126  127-3-127  128-3-128  135-3-135  136-3-136  138-3-138  139-3-139  140-3-140  141-3-141  142-3-142  143-3-143  144-3-144  146-3-146  148-3-148  150-3-150  152-3-152  155-3-155  157-3-157  158-3-158  159-3-159  160-3-160  164-3-164  166-3-166  167-3-167  168-3-168  (+105 more)
testcases/unnofficial/: case-4  case_xxx
testcases/unnofficial/adapted/: case1
testcases/unnofficial/adapted/hidden/: case6
testcases/unnofficial/debug_cases/: 2-0-0  2-0-0-2layers  2-0-0-2layers2  2-0-1  4-0-0-2layers2
testcases/unnofficial/random_cases/: 1-1-1  10-3-10  100-3-50  102-3-102  103-3-103  104-3-104  105-3-105  107-3-107  112-3-112  113-3-113  114-3-114  117-3-117  12-3-12  120-3-120  121-3-121  122-3-122  129-3-129  13-3-13  130-3-130  131-3-131  132-3-132  133-3-133  134-3-134  137-3-137  14-3-14  145-3-145  147-3-147  149-3-149  15-3-15  151-3-151  153-3-153  154-3-154  156-3-156  16-3-16  161-3-161  162-3-162  163-3-163  165-3-165  169-3-169  17-3-17  (+67 more)
tools/: evaluate.sh  report.sh
